Updated pricing & styling

--- a/mobile-app-development.html
+++ b/mobile-app-development.html
@@ -171,7 +171,7 @@
                             <div class="card-content">
                                 <div class="content">
                                     <h2><b>$500</b></h2>
-                                    <h3><b>$150 per month service fee</b></h3>
+                                    <h3 class="h3-price"><b>$100 per month service fee</b></h3>
                                     <h3>Development for either Hybrid or PWA</h3>
                                     <h3>Deployment to either the Apple or Google app stores or online</h3>
                                     <h3>Option for tab and/or side menu navigation</h3>
@@ -196,9 +196,11 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    <h2><b>$1,000</b></h2>
-                                    <h3><b>Development for either Hybrid Mobile App or PWA and Website</b></h3>
-                                    <h3><b>$150 per month service fee</b></h3>
+                                    <h2 class="h2-price"><b>$500 for app</b></h2>
+                                    <h2 class="h2-price"><b>+</b></h2>
+                                    <h2 class="h2-price"><b>$100 per page for website</b></h2>
+                                    <h3 class="h3-price"><b>$125 per month service fee</b></h3>
+                                    <h3>Development for either Hybrid Mobile App or PWA and Website</h3>
                                     <h3>Deployment to the Apple & Google app stores and online</h3>
                                     <h3>Same features as Hybrid App & PWA Plan</h3>
                                     <h3>Same features as Website Development Plan</h3>
@@ -223,7 +225,7 @@
                             <div class="card-content">
                                 <div class="content">
                                     <h2><b>$500 per app</b></h2>
-                                    <h3><b>$100 per month service fee per app</b></h3>
+                                    <h3 class="h3-price"><b>$75 per month service fee per app</b></h3>
                                     <h3>Two or more apps developed</h3>
                                     <h3>Development for either Hybrid or PWA</h3>
                                     <h3>Deployment to either the Apple or Google app stores or online</h3>
