--- a/website-development.html
+++ b/website-development.html
@@ -181,9 +181,11 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    <h2><b>$1,000</b></h2>
-                                    <h3><b>Development for either Hybrid Mobile App or PWA and Website</b></h3>
-                                    <h3><b>$150 per month service fee</b></h3>
+                                    <h2 class="h2-price"><b>$500 for app</b></h2>
+                                    <h2 class="h2-price"><b>+</b></h2>
+                                    <h2 class="h2-price"><b>$100 per page for website</b></h2>
+                                    <h3 class="h3-price"><b>$125 per month service fee</b></h3>
+                                    <h3>Development for either Hybrid Mobile App or PWA and Website</h3>
                                     <h3>Deployment to the Apple & Google app stores and online</h3>
                                     <h3>Same features as Hybrid App & PWA Plan</h3>
                                     <h3>Same features as Website Development Plan</h3>
@@ -197,7 +199,7 @@
                         </div>
                     </div>
 
-                    <div class="column">
+                    <!-- <div class="column">
                         <div class="card">
                             <header class="card-header">
                                 <p class="card-header-title is-centered">
@@ -219,8 +221,9 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-            </div>     
+                    </div> -->
+                </div>  
+            </div>   
         </section>
 
         <footer class="myfooter">
