Updated pricing & navigation

--- a/contact.html
+++ b/contact.html
@@ -72,9 +72,6 @@
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/website-development.html">
                                 Website Development
                             </a>
-                            <a class="navbar-item" href="https://kingdomappsolutions.tech/graphic-design.html">
-                                Graphic Design
-                            </a>
                         </div>
                     </div>
 
@@ -136,7 +133,7 @@
         <section class="hero section-padding">
             <div class="hero-body">
                 <h2 class="subtitle privacy-h2">
-                    We are excited to hear from you and how we can work with you to aid in your mobile app development, website development, or graphic design needs! Please fill out the contact form below and we will get back with you as soon as we can! <br><br> Alternatively, simply click the button below to schedule a virtual meeting now!
+                    We are excited to hear from you and how we can work with you to aid in your mobile app development or website development needs! Please fill out the contact form below and we will get back with you as soon as we can! <br><br> Alternatively, simply click the button below to schedule a virtual meeting now!
                 </h2>
                 <div class="buttons">
                     <a class="button calendly-button" href="https://calendly.com/kingdomappsolutions/consultation" target="_blank">Schedule a Call With Us!</a>
@@ -169,7 +166,6 @@
                                     </option>
                                     <option>Website Development
                                     </option>
-                                    <option >Graphic Design</option>
                                     <option>Pricing Question(s)</option>
                                     <option>Privacy Policy Question(s)</option>
                                     <option>Affiliate Disclosure Question(s)</option>
