--- a/index.html
+++ b/index.html
@@ -72,9 +72,6 @@
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/website-development.html">
                                 Website Development
                             </a>
-                            <a class="navbar-item" href="https://kingdomappsolutions.tech/graphic-design.html">
-                                Graphic Design
-                            </a>
                         </div>
                     </div>
 
@@ -127,7 +124,7 @@
                         <img class="home-image" src="./images/header.webp" width="500" height="281" alt="Our logo">
                     </picture><br>
                     <h1 class="title white-text">
-                        Mobile App Development, Website Development, & Graphic Design for Churches and Ministries!
+                        Mobile App Development and Website Development for Churches and Ministries!
                     </h1>
                 </div>    
             </div>     
@@ -141,17 +138,16 @@
                             Who We Are
                         </h2>
                         <h4 class="subtitle justify">
-                            We are a technology company that strives to glorify God through the creation and distribution of quality mobile apps, websites, and graphic design for churches, ministries, missionaries, and religious non-profit organizations. 
+                            We are a technology company that strives to glorify God through the creation and distribution of quality mobile apps and websites for churches, ministries, missionaries, and religious non-profit organizations. 
                         </h4>
                         <h4 class="subtitle">
-                            Our four core values are:
+                            Our core values are:
                         </h4>
                         <div class="content">
                             <ol class="ol">
                                 <li>Excellence</li>
                                 <li>Integrity</li>
                                 <li>Service</li>
-                                <li>Accountability</li>
                             </ol>
                         </div>
                         <a class="button info-button-blue" href="https://kingdomappsolutions.tech/mission-vision-values.html">
@@ -176,7 +172,7 @@
                         <picture>
                             <source srcset="./images/apps.webp" type="images/webp">
                             <source srcset="./images/apps.png" type="images/png">
-                            <img src="./images/apps.webp" alt="Mobile apps" width="640" height="480">
+                            <img src="./images/apps.webp" alt="Mobile app development" width="640" height="480">
                         </picture>
                     </div>
                     <div class="column">
@@ -184,9 +180,9 @@
                             Mobile App Development
                         </h2>
                         <h4 class="subtitle justify">
-                            We offer progressive web app (PWAs) and hybrid mobile app development for churches, ministries, missionaries, and religious non-profit organizations at an affordable price. Our goal is to bring mobile app development to those who otherwise would not be able to afford it. Our pricing packages seek to bridge the gap between having no mobile app and the high-priced apps. <br><br> Along with mobile app development, we also develop and deploy our own app solutions for both ministry purposes and entertainment value. These apps cover a wide range of genres including ministry, missions, and some games. Most of our apps are free with subscription options for more features. Each of our mobile apps are developed either as PWAs or hybrid mobile apps. PWAs are deployed online and hybrid apps are deployed to both the Google Play Store and the Apple App Store.
+                            We offer custom mobile app development for churches, ministries, missionaries, and religious non-profit organizations at an affordable price. Our goal is to bring mobile app development to those who otherwise would not be able to afford it. Our pricing packages seek to bridge the gap between having no mobile app and the high-priced apps. <br><br> Along with mobile app development, we also develop and deploy our own app solutions for both ministry purposes and entertainment value. These apps cover a wide range of genres including ministry, missions, and some games. Most of our apps are free with subscription options for more features. Each of our mobile apps are custom and tailored to your church or ministry's needs. Our mobile apps are deployed to both the Google Play Store and the Apple App Store.
                         </h4>
-                        <a class="button info-button-brick" href="https://kingdomappsolutions.tech/apps.html">
+                        <a class="button info-button-brick" href="https://kingdomappsolutions.tech/mobile-app-development.html">
                         <b>About Mobile App Development</b>
                         </a>
                     </div>
@@ -202,9 +198,9 @@
                             Website Development
                         </h2>
                         <h4 class="subtitle justify">
-                            We offer website design and development for churches, ministries, missionaries/church planters, or religious non-profit organizations interested in having a quality-made website. We also offer the creation of websites through a content manangement option. Our website development service is a monthly charge that includes development and site maintenance. We also offer the option of single landing pages and website development without a monthly service plan.
+                            We offer website design and development for churches, ministries, missionaries/church planters, or religious non-profit organizations interested in having a quality-made website. We also offer the creation of websites through a content manangement option. Our website development service is a monthly charge that includes development, site maintenance, regular updates, and much more.
                         </h4>
-                        <a class="button info-button-blue" href="https://kingdomappsolutions.tech/websites.html">
+                        <a class="button info-button-blue" href="https://kingdomappsolutions.tech/website-development.html">
                             <b>About Website Development</b>
                         </a>
                     </div><br>
@@ -224,30 +220,12 @@
                 <div class="columns is-centered">
                     <div class="column is-half">
                         <picture>
-                            <source srcset="./images/design.webp" type="images/webp">
-                            <source srcset="./images/design.png" type="images/png">
-                            <img src="./images/design.webp" alt="Mobile apps" width="640" height="480">
+                            <source srcset="./images/testimonials.webp" type="images/webp">
+                            <source srcset="./images/testimonials.png" type="images/png">
+                            <img src="./images/testimonials.webp" alt="Client testimonials" width="640" height="480">
                         </picture>
                     </div>
                     <div class="column">
-                        <h2 class="subtitle privacy-h3">
-                            Graphic Design
-                        </h2>
-                        <h4 class="subtitle justify">
-                            We offer a wide range of graphic design options. Whether you need a logo, printable graphics, or social media graphics, we can help! Quality graphic work allows your church, ministry, or religious non-profit to stand apart from the rest and make a greater impact! Custom graphic design can enable you to effectively communicate, give out information, and connect with others. <br><br> Pricing is dependent upon which type of graphic design you are needing. We can do most graphic work including logo creation, graphics for printables including flyers, brochures, banners, and door hangers. We also provide graphics for your social media page profile.
-                        </h4>
-                        <a class="button info-button-brick" href="https://kingdomappsolutions.tech/graphic-design.html">
-                        <b>About Graphic Design</b>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </section><hr>
-
-        <section class="hero section-padding">
-            <div class="hero-body">
-                <div class="columns is-centered">
-                    <div class="column is-half">
                         <h2 class="subtitle privacy-h3">
                             Client Testimonials
                         </h2>
@@ -265,13 +243,6 @@
                             </i><br><br><b>Heith Mitchell - Executive Director, BMA Texas Missions</b>
                         </h4>
                     </div><br>
-                    <div class="column">
-                        <picture>
-                            <source srcset="./images/testimonials.webp" type="images/webp">
-                            <source srcset="./images/testimonials.png" type="images/png">
-                            <img class="image-home" src="./images/testimonials.webp" alt="Website development" width="640" height="480">
-                        </picture>
-                    </div>
                 </div>
             </div>
         </section>
