--- a/products.html
+++ b/products.html
@@ -72,9 +72,6 @@
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/website-development.html">
                                 Website Development
                             </a>
-                            <a class="navbar-item" href="https://kingdomappsolutions.tech/graphic-design.html">
-                                Graphic Design
-                            </a>
                         </div>
                     </div>
 
@@ -136,7 +133,7 @@
         <section class="hero section-padding">
             <div class="hero-body">
                 <h2 class="subtitle privacy-h2">
-                    Along with providing hybrid mobile app development, website development services, and graphic design services, Kingdom Application Solutions LLC produces it's own line of software products. Currently, we have several mobile apps developed and deployed to the app stores. More software products are in development and will be released at a later time and reflected on this page.
+                    Along with providing custom mobile app development and custom website development services, Kingdom Application Solutions LLC produces it's own line of software products. Currently, we have several mobile apps developed and deployed to the app stores. More software products are in development and will be released at a later time and reflected on this page.
                 </h2><br>
                 <p></p>
                 <h1 class="title">
