--- a/services.html
+++ b/services.html
@@ -72,9 +72,6 @@
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/website-development.html">
                                 Website Development
                             </a>
-                            <a class="navbar-item" href="https://kingdomappsolutions.tech/graphic-design.html">
-                                Graphic Design
-                            </a>
                         </div>
                     </div>
 
@@ -136,9 +133,66 @@
         <section class="hero section-padding">
             <div class="hero-body">
                 <h2 class="subtitle privacy-h2">
-                    Presently, we offer three main services at Kingdom Application Solutions LLC: mobile application development, website design and development, and graphic design work for churches, ministries, missionaries, and religious non-profit organizations. Each of these services has the goal of glorifying God through their creation. Click the link in each card below for more information for each of the services we offer.
-                </h2><br>
+                    Presently, we offer two main services at Kingdom Application Solutions LLC: mobile app development and website design and development for churches, ministries, missionaries, and religious non-profit organizations. Each of these services has the goal of glorifying God through their creation. Read more about each service below. 
+                </h2>
+            </div>
+        </section>
+
+        <section class="hero section-padding">
+            <div class="hero-body">
                 <div class="columns is-centered">
+                    <div class="column is-half">
+                        <picture>
+                            <source srcset="./images/apps.webp" type="images/webp">
+                            <source srcset="./images/apps.png" type="images/png">
+                            <img src="./images/apps.webp" alt="Mobile apps" width="640" height="480">
+                        </picture>
+                    </div>
+                    <div class="column">
+                        <h2 class="subtitle privacy-h3">
+                            Mobile App Development
+                        </h2>
+                        <h4 class="subtitle justify">
+                            Mobile app development is one of the chief services offered by Kingdom Application Solutions LLC. With the proclivity of mobile phones and their use, mobile apps and mobile software products are used by people around the world. Our aim is to bring affordable mobile app development to churches, ministries, missionaries, and religious non-profit organizations. <br><br> A hybrid mobile app for your church or ministry can allow for your church or ministry to communicate with your congregation, ministry target area, or mission field. Often mobile app development costs tens of thousands of dollars for development plus monthly maintenance fees. These high prices often make mobile apps unavailable to churches and ministries. Our pricing packages seek to bridge the gap between having no mobile app and the high-priced apps by offering much better quality apps, no upfront costs, unlimited updates, and a more custom feel for the app that fits your specific location and congregation.
+                        </h4>
+                        <a class="button info-button-brick" href="https://kingdomappsolutions.tech/mobile-app-development.html">
+                        <b>Mobile App Development Pricing</b>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section><hr>
+
+        <section class="hero section-padding">
+            <div class="hero-body">
+                <div class="columns is-centered">
+                    <div class="column is-half">
+                        <h2 class="subtitle privacy-h3">
+                            Website Development
+                        </h2>
+                        <h4 class="subtitle justify">
+                            Website design & development is one of the foundational services Kingdom Application Solutions LLC offers. A website is the first place people will visit when checking out your church, mission, or religious non-profit organization so it is a vital piece of any ministry's marketing and outreach plan. Websites should look nice not only on a computer, but also on mobile phones. We develop "mobile-first" knowing that many people will use their mobile devices when searching for a ministry's web presence. A well-made website illustrates to others that you do things with excellence and take the cause of Christ seriously. <br><br>
+
+                            A custom website for your church, ministry, mission, or religious non-profit organization can enable you to effectively communicate with your congregation, ministry target area, mission field, or donors. Listed below are the website development packages Kingdom Application Solutions LLC offers to get your website up and running. We offer a robust, custom website that increases search engine optimization and other website metrics to get your organization noticed. Contact us through the contact page if you are interested in website development for your organization or click the button to learn more about our pricing packages.
+
+                            <!-- We offer website design and development for churches, ministries, missionaries/church planters, or religious non-profit organizations interested in having a quality-made website. We also offer the creation of websites through a content manangement option. Our website development service is a monthly charge that includes development and site maintenance. We also offer the option of single landing pages and website development without a monthly service plan. -->
+                        </h4>
+                        <a class="button info-button-blue" href="https://kingdomappsolutions.tech/website-development.html">
+                            <b>Website Development Pricing</b>
+                        </a>
+                    </div><br>
+                    <div class="column">
+                        <picture>
+                            <source srcset="./images/websites.webp" type="images/webp">
+                            <source srcset="./images/websites.png" type="images/png">
+                            <img class="image-home" src="./images/websites.webp" alt="Website development" width="640" height="480">
+                        </picture>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+                <!-- <div class="columns is-centered">
                     <div class="column">
                         <div class="card">
                             <header class="card-header">
@@ -190,7 +244,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <footer class="myfooter">
             <div class="content has-text-centered">
