--- a/about.html
+++ b/about.html
@@ -72,9 +72,6 @@
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/website-development.html">
                                 Website Development
                             </a>
-                            <a class="navbar-item" href="https://kingdomappsolutions.tech/graphic-design.html">
-                                Graphic Design
-                            </a>
                         </div>
                     </div>
 
@@ -136,16 +133,16 @@
         <section class="hero section-padding">
             <div class="hero-body">
                 <h2 class="subtitle privacy-h2">
-                    Kingdom Application Solutions LLC is a technology company that strives to glorify God through the creation and distribution of quality software applications. We seek to aid any organization, small or large, that needs and desires mobile app development, website development, or graphic design. We aim to make these services more accessible especially to churches, ministries, missionaries, and religious non-profit organizations.
+                    Kingdom Application Solutions LLC is a technology company that strives to glorify God through the creation and distribution of quality software applications. We seek to aid any organization, small or large, that needs and desires mobile app development and/or website development. We aim to make these services more accessible especially to churches, ministries, missionaries, and religious non-profit organizations.
 
-                    Our goal is to provide quality mobile apps and website development either through a content management system or with custom HTML to deploy to your domain. Our user-friendly mobile apps will be deployed either as progressive web apps (PWAs) or as hybrid apps on both the Google Play Store and the Apple App Store. Our websites are hosted on a fast server with little to no downtime. Our graphic design services are all custom and include things such as logos, graphics for printables, or brochures.
+                    Our goal is to provide quality custom mobile apps and custom website development to deploy to your domain. Our user-friendly mobile apps will be deployed on both the Google Play Store and the Apple App Store. Our websites are hosted on a fast server with little to no downtime.
                 </h2><br>
                 <h1 class="title">
                     Our Founder
                 </h1>
                 <p></p>
                 <h2 class="subtitle privacy-h2">
-                    My name is Justin Owens. I am a former missionary in Estonia and Ukraine and former pastor in Texas. I have been developing for the web since the early 2000s and have been deploying mobile apps since 2019. I have designed multiple websites and managed content management systems for ministry organizations as well as deployed a number of mobile apps to the Google Play Store and the Apple App Store. I am passionate about designing quality mobile apps, developing user-friendly websites, and providing quality graphic designs all for the glory of God!
+                    My name is Justin Owens. I am a former missionary in Estonia and Ukraine and former pastor in Texas. I have been developing for the web since the early 2000s and have been deploying mobile apps since 2019. I have designed multiple websites and managed content management systems for ministry organizations as well as deployed a number of mobile apps to the Google Play Store and the Apple App Store. I am passionate about designing quality custom mobile apps and developing custom user-friendly websites all for the glory of God!
                 </h2><br>
                 <div class="columns is-centered">
                     <div class="column is-half">
