--- a/mission-vision-values.html
+++ b/mission-vision-values.html
@@ -72,9 +72,6 @@
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/website-development.html">
                                 Website Development
                             </a>
-                            <a class="navbar-item" href="https://kingdomappsolutions.tech/graphic-design.html">
-                                Graphic Design
-                            </a>
                         </div>
                     </div>
 
@@ -139,7 +136,7 @@
                 </h1>
                 <p></p>
                 <h2 class="subtitle">
-                    Kingdom Application Solutions LLC exists to glorify God through the creation and distribution of quality mobile apps, website design & development, and graphic design work.
+                    Kingdom Application Solutions LLC exists to glorify God through the creation and distribution of quality custom mobile apps and custom website design & development.
                 </h2><br><hr>
                 <h1 class="title">
                     Our Vision
@@ -153,7 +150,7 @@
                 </h1>
                 <p></p>
                 <h2 class="subtitle">
-                    Kingdom Application Solutions LLC has four main core values:
+                    Kingdom Application Solutions LLC has three main core values:
                 </h2>
                 <div class="columns">
                     <div class="column">
@@ -197,21 +194,6 @@
                             <div class="card-content">
                                 <div class="content">
                                     Our company exists to serve churches, ministries, missionaries, and religious non-profit organizations have access to quality made websites, mobile apps, and graphic design. We make every decision and measure every outcome based on how well it serves our clients and how it builds the Kingdom. We listen to our clients’ needs, provide options, and deliver beyond their expectations.
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="column">
-                        <div class="card">
-                            <header class="card-header-brick">
-                                <p class="card-header-title is-centered">
-                                    <i class="fa-solid fa-landmark"></i>&nbsp;
-                                    Accountability
-                                </p>
-                            </header>
-                            <div class="card-content">
-                                <div class="content">
-                                    Accountability is about staying true to our word. It means we do what we say we’re going to do. If something happens to prevent that, we determine the new course and communicate quickly. We believe that accepting responsibility for your actions (and inactions) is the ultimate way to build trust and also exemplifies our commitment to glorify God through our work.
                                 </div>
                             </div>
                         </div>
