--- a/mobile-app-development.html
+++ b/mobile-app-development.html
@@ -72,9 +72,6 @@
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/website-development.html">
                                 Website Development
                             </a>
-                            <a class="navbar-item" href="https://kingdomappsolutions.tech/graphic-design.html">
-                                Graphic Design
-                            </a>
                         </div>
                     </div>
 
@@ -137,22 +134,6 @@
             <div class="hero-body">
                 <h2 class="subtitle privacy-h2">
                     Mobile app development is one of the chief services offered by Kingdom Application Solutions LLC. With the proclivity of mobile phones and their use, mobile apps and mobile software products are used by people around the world. Our aim is to bring affordable mobile app development to churches, ministries, missionaries, and religious non-profit organizations. Often mobile app development costs tens of thousands of dollars which churches cannot cover. Our pricing packages seek to bridge the gap between having no mobile app and the high-priced apps.
-                </h2>
-                <p></p>
-                <h1 class="title">
-                    Hybrid App Development
-                </h1>
-                <p></p>
-                <h2 class="subtitle privacy-h2">
-                    A hybrid mobile app for your church or ministry can allow for your church or ministry to communicate with your congregation, ministry target area, or mission field. Hybrid mobile apps tend to be larger file sizes and require users to find the app on the respective app stores and download them to their device. Hybrid mobile apps are more popular and feature rich, but get downloaded much less frequently. Any updates to hybrid apps could take time due to app store approval times with typical updates happening within a day. Hybrid mobile apps are a great option if you want users to have a more native app feel with more device hardware functionality.
-                </h2>
-                <p></p>
-                <h1 class="title">
-                    Progressive Web App Development
-                </h1>
-                <p></p>
-                <h2 class="subtitle privacy-h2">
-                    In contrast, a progressive web app (PWA) for your church or ministry also enables you to effectively communicate with your congregation, ministry target area, or mission field. PWAs are lighter than hybrid mobile apps, are installed from a web browser rather than an app store, and allow for more instant updates without app store waiting times. PWAs are also easier to find through web searches than hybrid apps and can utilize search engine optimization. PWAs can do much of the same things hybrid apps can do including receive push notifications (currently not available on iOS) and utilize some device hardware. Progressive web apps are becoming much more popular especially considering that 51% of smartphone users have downloaded zero apps from app stores each month. Some examples of organizations using PWAs include Trivago, Starbucks, Pinterest, and Uber. <br><br> Listed below are the app development packages Kingdom Application Solutions LLC offers to get your mobile app up and running and deployed to either the app stores or online as a PWA. Contact us through the contact page if you are interested in either PWA or hybrid mobile app development.
                 </h2><hr>
                 <p></p>
                 <h1 class="title">
@@ -165,19 +146,21 @@
                             <header class="card-header">
                                 <p class="card-header-title is-centered">
                                     <i class="fa-solid fa-brackets-curly"></i>&nbsp;
-                                    Hybrid Apps & PWAs
+                                    Mobile App Development
                                 </p>
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    <h2><b>$500</b></h2>
-                                    <h3 class="h3-price"><b>$100 per month service fee</b></h3>
-                                    <h3>Development for either Hybrid or PWA</h3>
-                                    <h3>Deployment to either the Apple or Google app stores or online</h3>
+                                    <h2><b>$250 per month</b></h2>
+                                    <h3><b>No setup fee!</b></h3>
+                                    <h3><b>No upfront costs!</b></h3>
+                                    <h3>Development for custom mobile app</h3>
+                                    <h3>Deployment to both the Apple and Google app stores</h3>
                                     <h3>Option for tab and/or side menu navigation</h3>
                                     <h3>No page limit!</h3>
                                     <h3>No limit for feature integrations!</h3>
-                                    <h3>Periodic updates made as needed to publish updated content</h3><br>
+                                    <h3>Custom branding and push notifications</h3>
+                                    <h3>Unlimited updates made as needed to publish updated content</h3><br>
                                     <div class="buttons is-centered">
                                         <a class="button info-button-blue" href="https://bit.ly/3Tezd2A" target="_blank"><b>Get Started!</b></a>
                                     </div>
@@ -196,15 +179,15 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    <h2 class="h2-price"><b>$500 for app</b></h2>
-                                    <h2 class="h2-price"><b>+</b></h2>
-                                    <h2 class="h2-price"><b>$100 per page for website</b></h2>
-                                    <h3 class="h3-price"><b>$125 per month service fee</b></h3>
-                                    <h3>Development for either Hybrid Mobile App or PWA and Website</h3>
+                                    <h2 class="h2-price"><b>$300 per month</b></h2>
+                                    <h3><b>No setup fee!</b></h3>
+                                    <h3><b>No upfront costs!</b></h3>
+                                    <h3>Development for custom mobile app and custom website</h3>
                                     <h3>Deployment to the Apple & Google app stores and online</h3>
-                                    <h3>Same features as Hybrid App & PWA Plan</h3>
+                                    <h3>Same features as Mobile App Plan</h3>
                                     <h3>Same features as Website Development Plan</h3>
-                                    <h3>Periodic updates made as needed to publish updated content.</h3>
+                                    <h3>Unlimited updates made as needed to publish updated content.</h3>
+                                    <h3><b><i>SAVE $100 PER MONTH!</i></b></h3>
                                     <h3><b><i>BEST VALUE FOR COMPLETE SOLUTION!</i></b></h3><br>
                                     <div class="buttons is-centered">
                                         <a class="button info-button-brick" href="https://bit.ly/3fSxIbx" target="_blank"><b>Get Started!</b></a>
@@ -224,15 +207,17 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    <h2><b>$500 per app</b></h2>
-                                    <h3 class="h3-price"><b>$75 per month service fee per app</b></h3>
+                                    <h2><b>$200 per month per app</b></h2>
+                                    <h3><b>No setup fee!</b></h3>
+                                    <h3><b>No upfront costs!</b></h3>
                                     <h3>Two or more apps developed</h3>
-                                    <h3>Development for either Hybrid or PWA</h3>
-                                    <h3>Deployment to either the Apple or Google app stores or online</h3>
+                                    <h3>Development for custom mobile app and custom website</h3>
+                                    <h3>Deployment to both the Apple and Google app stores</h3>
                                     <h3>Option for tab and/or side menu navigation</h3>
                                     <h3>No page limit!</h3>
                                     <h3>No limit for feature integrations!</h3>
-                                    <h3>Periodic updates made as needed to publish updated content</h3>
+                                    <h3>Unlimited updates made as needed to publish updated content</h3>
+                                    <h3><b><i>SAVE $50 PER MONTH PER APP!</i></b></h3>
                                     <h3><b><i>GREAT OPTION FOR MULTIPLE APPS!</i></b></h3><br>
                                     <div class="buttons is-centered">
                                         <a class="button info-button-blue" href="https://bit.ly/3RMey48" target="_blank"><b>Get Started!</b></a>
