--- a/website-development.html
+++ b/website-development.html
@@ -72,9 +72,6 @@
                             <a class="navbar-item is-active" href="https://kingdomappsolutions.tech/website-development.html">
                                 Website Development
                             </a>
-                            <a class="navbar-item" href="https://kingdomappsolutions.tech/graphic-design.html">
-                                Graphic Design
-                            </a>
                         </div>
                     </div>
 
@@ -137,10 +134,6 @@
             <div class="hero-body">
                 <h2 class="subtitle privacy-h2">
                     Website design & development is one of the foundational services Kingdom Application Solutions LLC offers. A website is the first place people will visit when checking out your church, mission, or religious non-profit organization so it is a vital piece of any ministry's marketing and outreach plan. Websites should look nice not only on a computer, but also on mobile phones. We develop "mobile-first" knowing that many people will use their mobile devices when searching for a ministry's web presence. A well-made website illustrates to others that you do things with excellence and take the cause of Christ seriously.
-                </h2>
-                <p></p>
-                <h2 class="subtitle privacy-h2">
-                    A custom website for your church, ministry, mission, or religious non-profit organization can enable you to effectively communicate with your congregation, ministry target area, mission field, or donors. Listed below are the website development packages Kingdom Application Solutions LLC offers to get your website up and running. You can choose from a robust, custom website that increases search engine optimization and other website metrics to get your organization noticed or a simple content management system (CMS). Contact us through the contact page if you are interested in website development for your organization.
                 </h2><hr>
                 <h1 class="title">
                     Pricing
@@ -156,12 +149,11 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    <h2><b>$100 per page</b></h2>
-                                    <h3><b>$100 setup fee</b></h3>
-                                    <h3><b>Website Development, Graphic Design, Search Engine Optimization, Increased Performance, Domain Setup, and Hosting Setup</b></h3>
-                                    <h3>No page maximum!</h3>
-                                    <h3>Five (5) page minimum site</h3>
-                                    <h3><b>$50 per month service fee</b></h3>
+                                    <h2><b>$150 per month</b></h2>
+                                    <h3><b>No setup fee!</b></h3>
+                                    <h3><b>No upfront costs!</b></h3>
+                                    <h3><b>Custom Website Development, Graphic Design, Search Engine Optimization, Increased Performance, Domain Setup, Hosting Setup, & Unlimited Updates</b></h3>
+                                    <h3>No page minimum or maximum!</h3>
                                     <h3><b>$50 per year for hosting</b></h3><br>
                                     <div class="buttons is-centered">
                                         <a class="button info-button-blue" href="https://bit.ly/3ekiZWf" target="_blank"><b>Get Started!</b></a>
@@ -181,15 +173,15 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    <h2 class="h2-price"><b>$500 for app</b></h2>
-                                    <h2 class="h2-price"><b>+</b></h2>
-                                    <h2 class="h2-price"><b>$100 per page for website</b></h2>
-                                    <h3 class="h3-price"><b>$125 per month service fee</b></h3>
-                                    <h3>Development for either Hybrid Mobile App or PWA and Website</h3>
+                                    <h2 class="h2-price"><b>$300 per month</b></h2>
+                                    <h3><b>No setup fee!</b></h3>
+                                    <h3><b>No upfront costs!</b></h3>
+                                    <h3>Development for custom mobile app and custom website</h3>
                                     <h3>Deployment to the Apple & Google app stores and online</h3>
-                                    <h3>Same features as Hybrid App & PWA Plan</h3>
+                                    <h3>Same features as Mobile App Plan</h3>
                                     <h3>Same features as Website Development Plan</h3>
-                                    <h3>Periodic updates made as needed to publish updated content.</h3>
+                                    <h3>Unlimited updates made as needed to publish updated content.</h3>
+                                    <h3><b><i>SAVE $100 PER MONTH!</i></b></h3>
                                     <h3><b><i>BEST VALUE FOR COMPLETE SOLUTION!</i></b></h3><br>
                                     <div class="buttons is-centered">
                                         <a class="button info-button-brick" href="https://bit.ly/3fSxIbx" target="_blank"><b>Get Started!</b></a>
