Updated Products page

--- a/products.html
+++ b/products.html
@@ -156,9 +156,11 @@
                                 <div class="content justify">
                                     Simple Evangelism is an app that every follower of Jesus can use to lead people into a saving relationship with him. The app guides the user in a conversation with another through simple questions and a pleasant user interface. <br><br>
 
-                                    Complete with common objections that people may offer, the app gives any Christian the confidence needed to share their faith. The app also offers a growth pathway for new believers that the user can follow to aid in initial discipleship efforts. <br><br>
+                                    Complete with common objections that people may offer, the app gives any Christian the confidence needed to share their faith. The app also offers a growth pathway for new believers that the user can follow to aid in initial discipleship efforts. Evangelism should be easy. Not hard. <br><br>
 
-                                    Evangelism should be easy. Not hard.
+                                    This app is currently available on both the Google Play Store an Apple App Store for a low price of $2.99. <br><br>
+
+                                    We pray it is useful as you seek to lead others to Christ!
                                 </div>
                             </div>
                             <footer class="card-footer">
@@ -192,6 +194,8 @@
                                     Memory Brain Game is a simple, Simon-like game that aids in building memory strength. The game initially has four levels of increasing difficulty. Tap the buttons that appear randomly every play to finish the level. <br><br>
 
                                     Plans are in the works to scale the game to bring more unique game play. Various levels of difficulty will be introduced giving a 2x2, 3x3, 4x4, 5x5, and 6x6 game experience. These updates will be released later to give the game a more challenging aspect. <br><br>
+
+                                    This app is available on both the Google Play Store and Apple App Stores for free.
                                 </div>
                             </div>
                             <footer class="card-footer">
