Updated contract link

--- a/mobile-app-development.html
+++ b/mobile-app-development.html
@@ -162,7 +162,7 @@
                                     <h3>Custom branding and push notifications</h3>
                                     <h3>Unlimited updates made as needed to publish updated content</h3><br>
                                     <div class="buttons is-centered">
-                                        <a class="button info-button-blue" href="https://bit.ly/3Tezd2A" target="_blank"><b>Get Started!</b></a>
+                                        <a class="button info-button-blue" href="https://bit.ly/3UbGG29" target="_blank"><b>Get Started!</b></a>
                                     </div>
                                 </div>
                             </div>
