Added missionary pricing

--- a/mobile-app-development.html
+++ b/mobile-app-development.html
@@ -226,8 +226,101 @@
                             </div>
                         </div>
                     </div>
+                </div><hr>
+
+                <p></p>
+                <h1 class="title">
+                    Special Missionary Pricing
+                </h1>
+                <div class="columns">
+                    <div class="column">
+                        <p></p>
+                        <div class="card">
+                            <header class="card-header">
+                                <p class="card-header-title is-centered">
+                                    <i class="fa-solid fa-brackets-curly"></i>&nbsp;
+                                    Mobile App Development
+                                </p>
+                            </header>
+                            <div class="card-content">
+                                <div class="content">
+                                    <h2><b>$150 per month</b></h2>
+                                    <h3><b>No setup fee!</b></h3>
+                                    <h3><b>No upfront costs!</b></h3>
+                                    <h3>Development for custom mobile app</h3>
+                                    <h3>Deployment to both the Apple and Google app stores</h3>
+                                    <h3>Option for tab and/or side menu navigation</h3>
+                                    <h3>No page limit!</h3>
+                                    <h3>No limit for feature integrations!</h3>
+                                    <h3>Custom branding and push notifications</h3>
+                                    <h3>Unlimited updates made as needed to publish updated content</h3><br>
+                                    <div class="buttons is-centered">
+                                        <a class="button info-button-blue" href="https://bit.ly/3WBXFwR" target="_blank"><b>Get Started!</b></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                
+                    <div class="column">
+                        <div class="card">
+                            <header class="card-header-brick">
+                                <p class="card-header-title is-centered">
+                                    <i class="fa-solid fa-star"></i>&nbsp;
+                                    App & Website Bundle
+                                </p>
+                            </header>
+                            <div class="card-content">
+                                <div class="content">
+                                    <h2 class="h2-price"><b>$175 per month</b></h2>
+                                    <h3><b>No setup fee!</b></h3>
+                                    <h3><b>No upfront costs!</b></h3>
+                                    <h3>Development for custom mobile app and custom website</h3>
+                                    <h3>Deployment to the Apple & Google app stores and online</h3>
+                                    <h3>Same features as Mobile App Plan</h3>
+                                    <h3>Same features as Website Development Plan</h3>
+                                    <h3>Unlimited updates made as needed to publish updated content.</h3>
+                                    <h3><b><i>SAVE $25 PER MONTH!</i></b></h3>
+                                    <h3><b><i>BEST VALUE FOR COMPLETE SOLUTION!</i></b></h3><br>
+                                    <div class="buttons is-centered">
+                                        <a class="button info-button-brick" href="https://bit.ly/3NNDbgy" target="_blank"><b>Get Started!</b></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="column">
+                        <div class="card">
+                            <header class="card-header">
+                                <p class="card-header-title is-centered">
+                                    <i class="fa-solid fa-boxes-stacked"></i>&nbsp;
+                                    Mobile App Bundle
+                                </p>
+                            </header>
+                            <div class="card-content">
+                                <div class="content">
+                                    <h2><b>$100 per month per app</b></h2>
+                                    <h3><b>No setup fee!</b></h3>
+                                    <h3><b>No upfront costs!</b></h3>
+                                    <h3>Two or more apps developed</h3>
+                                    <h3>Development for custom mobile app and custom website</h3>
+                                    <h3>Deployment to both the Apple and Google app stores</h3>
+                                    <h3>Option for tab and/or side menu navigation</h3>
+                                    <h3>No page limit!</h3>
+                                    <h3>No limit for feature integrations!</h3>
+                                    <h3>Unlimited updates made as needed to publish updated content</h3>
+                                    <h3><b><i>SAVE $50 PER MONTH PER APP!</i></b></h3>
+                                    <h3><b><i>GREAT OPTION FOR MULTIPLE APPS!</i></b></h3><br>
+                                    <div class="buttons is-centered">
+                                        <a class="button info-button-blue" href="https://bit.ly/3TfSm39" target="_blank"><b>Get Started!</b></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-            </div>     
+            </div>
         </section>
 
         <footer class="myfooter">
