--- a/website-development.html
+++ b/website-development.html
@@ -190,31 +190,63 @@
                             </div>
                         </div>
                     </div>
-
-                    <!-- <div class="column">
+                </div><hr>
+                <h1 class="title">
+                    Special Missionary Pricing
+                </h1>
+                <div class="columns">
+                    <div class="column">
                         <div class="card">
                             <header class="card-header">
                                 <p class="card-header-title is-centered">
-                                    <i class="fa-regular fa-rectangle-code"></i>&nbsp;
-                                    Landing Page
+                                    <i class="fa-solid fa-code"></i>&nbsp;
+                                    Website Development
                                 </p>
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    <h2><b>$500</b></h2>
-                                    <h3><b>$100 setup fee</b></h3>
-                                    <h3><b>Website Development, Graphic Design, Search Engine Optimization, Domain Setup, and Hosting Setup</b></h3>
-                                    <h3>Optional $50 per month service fee</h3>
-                                    <h3><b>$50 per year for hosting</b></h3>
-                                    <h3><b><i>BEST VALUE FOR A SIMPLE ONE-PAGE SITE!</i></b></h3><br>
+                                    <h2><b>$50 per month</b></h2>
+                                    <h3><b>No setup fee!</b></h3>
+                                    <h3><b>No upfront costs!</b></h3>
+                                    <h3><b>Custom Website Development, Graphic Design, Search Engine Optimization, Increased Performance, Domain Setup, Hosting Setup, & Unlimited Updates</b></h3>
+                                    <h3>No page minimum or maximum!</h3>
+                                    <h3><b>$50 per year for hosting</b></h3><br>
                                     <div class="buttons is-centered">
-                                        <a class="button info-button-blue" href="https://bit.ly/3yfJTFk" target="_blank"><b>Get Started!</b></a>
+                                        <a class="button info-button-blue" href="https://bit.ly/3UTCrsL" target="_blank"><b>Get Started!</b></a>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div> -->
-                </div>  
+                    </div>
+
+                    <div class="column">
+                        <div class="card">
+                            <header class="card-header-brick">
+                                <p class="card-header-title is-centered">
+                                    <i class="fa-solid fa-star"></i>&nbsp;
+                                    App & Website Bundle
+                                </p>
+                            </header>
+                            <div class="card-content">
+                                <div class="content">
+                                    <h2 class="h2-price"><b>$175 per month</b></h2>
+                                    <h3><b>No setup fee!</b></h3>
+                                    <h3><b>No upfront costs!</b></h3>
+                                    <h3>Development for custom mobile app and custom website</h3>
+                                    <h3>Deployment to the Apple & Google app stores and online</h3>
+                                    <h3>Same features as Mobile App Plan</h3>
+                                    <h3>Same features as Website Development Plan</h3>
+                                    <h3>Unlimited updates made as needed to publish updated content.</h3>
+                                    <h3><b><i>SAVE $25 PER MONTH!</i></b></h3>
+                                    <h3><b><i>BEST VALUE FOR COMPLETE SOLUTION!</i></b></h3><br>
+                                    <div class="buttons is-centered">
+                                        <a class="button info-button-brick" href="https://bit.ly/3NNDbgy" target="_blank"><b>Get Started!</b></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>   
         </section>
 
